# navier-stokes-solver

./: .gitignore  .pylintrc  bpcg_test.csv  bpcg_test_all_hdg.csv  bpcg_test_all_nc.csv  bpcg_test_precons.csv  bramble-pasciak-preconditioner.py  bramble_pasciak_cg.py  discretizations.py  heat.py  krylovspace.py  minres.py  navierstokes_block.py  orthonormalization.py  plot.py  plot_heat.py  profile.py  run.py  runge_kutta_method.py  solvers.py  stokes.py  stokes_curldiv.py  stokes_curldiv_cg.py  stokes_hcurldiv.py  stokes_hdg.py  stokes_nc.py  test.py
blockjacobi_parallel/: CMakeLists.txt  main.cpp  mainfast.cpp
embedding/: basistrafo.py  embedding_simple.py  harmonic_extension.py  helpers.py  simple.py  stokes_he.py  stokes_hodivfree.py  stokes_mintest.py  test_stokes.py
exponential_integrators/: compare_sols.py  core.py  heat_equation.py  heat_simple.py  rk_implicit_ho.py  wave_equation.py  wave_simple.py
multiplicative_precond/: model_problem.py  preconditioners.py
solvers/: bramblepasciak.py  bramblepasciak_new.py  krylovspace.py
template/: NavierStokes_template.py  test_navierstokes.py
templates/: NavierStokesSIMPLE.py  NavierStokesSIMPLE_iterative.py  NavierStokesSIMPLE_test.py  NavierStokesSIMPLE_test_3D.py  plot_navier_stokes.py  run_navier_stokes_parameter_sweep.py
